# server/gen/go/v1/amizone.pb.gw.go
@@ -387,6 +387,42 @@ func local_request_AmizoneService_DeregisterWifiMac_0(ctx context.Context, marsh
 
 }
 
+var (
+	filter_AmizoneService_FillFacultyFeedback_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_AmizoneService_FillFacultyFeedback_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq FillFacultyFeedbackRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_AmizoneService_FillFacultyFeedback_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.FillFacultyFeedback(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_AmizoneService_FillFacultyFeedback_0(ctx context.Context, marshaler runtime.Marshaler, server AmizoneServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq FillFacultyFeedbackRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_AmizoneService_FillFacultyFeedback_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.FillFacultyFeedback(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterAmizoneServiceHandlerServer registers the http handlers for service AmizoneService to "mux".
 // UnaryRPC     :call AmizoneServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -630,6 +666,30 @@ func RegisterAmizoneServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 
 		forward_AmizoneService_DeregisterWifiMac_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_AmizoneService_FillFacultyFeedback_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/FillFacultyFeedback", runtime.WithHTTPPathPattern("/api/v1/faculty/feedback/submit"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_AmizoneService_FillFacultyFeedback_0(ctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_AmizoneService_FillFacultyFeedback_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -884,6 +944,27 @@ func RegisterAmizoneServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
+	mux.Handle("POST", pattern_AmizoneService_FillFacultyFeedback_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/FillFacultyFeedback", runtime.WithHTTPPathPattern("/api/v1/faculty/feedback/submit"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_AmizoneService_FillFacultyFeedback_0(ctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_AmizoneService_FillFacultyFeedback_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -907,6 +988,8 @@ var (
 	pattern_AmizoneService_RegisterWifiMac_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "wifi_mac"}, ""))
 
 	pattern_AmizoneService_DeregisterWifiMac_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "wifi_mac", "address"}, ""))
+
+	pattern_AmizoneService_FillFacultyFeedback_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 2, 4}, []string{"api", "v1", "faculty", "feedback", "submit"}, ""))
 )
 
 var (
@@ -929,4 +1012,6 @@ var (
 	forward_AmizoneService_RegisterWifiMac_0 = runtime.ForwardResponseMessage
 
 	forward_AmizoneService_DeregisterWifiMac_0 = runtime.ForwardResponseMessage
+
+	forward_AmizoneService_FillFacultyFeedback_0 = runtime.ForwardResponseMessage
 )
