# server/gen/go/v1/amizone_grpc.pb.go
@@ -39,6 +39,7 @@ type AmizoneServiceClient interface {
 	GetWifiMacInfo(ctx context.Context, in *EmptyMessage, opts ...grpc.CallOption) (*WifiMacInfo, error)
 	RegisterWifiMac(ctx context.Context, in *RegisterWifiMacRequest, opts ...grpc.CallOption) (*EmptyMessage, error)
 	DeregisterWifiMac(ctx context.Context, in *DeregisterWifiMacRequest, opts ...grpc.CallOption) (*EmptyMessage, error)
+	FillFacultyFeedback(ctx context.Context, in *FillFacultyFeedbackRequest, opts ...grpc.CallOption) (*EmptyMessage, error)
 }
 
 type amizoneServiceClient struct {
@@ -139,6 +140,15 @@ func (c *amizoneServiceClient) DeregisterWifiMac(ctx context.Context, in *Deregi
 	return out, nil
 }
 
+func (c *amizoneServiceClient) FillFacultyFeedback(ctx context.Context, in *FillFacultyFeedbackRequest, opts ...grpc.CallOption) (*EmptyMessage, error) {
+	out := new(EmptyMessage)
+	err := c.cc.Invoke(ctx, "/go_amizone.server.proto.v1.AmizoneService/FillFacultyFeedback", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // AmizoneServiceServer is the server API for AmizoneService service.
 // All implementations must embed UnimplementedAmizoneServiceServer
 // for forward compatibility
@@ -160,6 +170,7 @@ type AmizoneServiceServer interface {
 	GetWifiMacInfo(context.Context, *EmptyMessage) (*WifiMacInfo, error)
 	RegisterWifiMac(context.Context, *RegisterWifiMacRequest) (*EmptyMessage, error)
 	DeregisterWifiMac(context.Context, *DeregisterWifiMacRequest) (*EmptyMessage, error)
+	FillFacultyFeedback(context.Context, *FillFacultyFeedbackRequest) (*EmptyMessage, error)
 	mustEmbedUnimplementedAmizoneServiceServer()
 }
 
@@ -196,6 +207,9 @@ func (UnimplementedAmizoneServiceServer) RegisterWifiMac(context.Context, *Regis
 }
 func (UnimplementedAmizoneServiceServer) DeregisterWifiMac(context.Context, *DeregisterWifiMacRequest) (*EmptyMessage, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DeregisterWifiMac not implemented")
+}
+func (UnimplementedAmizoneServiceServer) FillFacultyFeedback(context.Context, *FillFacultyFeedbackRequest) (*EmptyMessage, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method FillFacultyFeedback not implemented")
 }
 func (UnimplementedAmizoneServiceServer) mustEmbedUnimplementedAmizoneServiceServer() {}
 
@@ -390,6 +404,24 @@ func _AmizoneService_DeregisterWifiMac_Handler(srv interface{}, ctx context.Cont
 	return interceptor(ctx, in, info, handler)
 }
 
+func _AmizoneService_FillFacultyFeedback_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(FillFacultyFeedbackRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AmizoneServiceServer).FillFacultyFeedback(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/go_amizone.server.proto.v1.AmizoneService/FillFacultyFeedback",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AmizoneServiceServer).FillFacultyFeedback(ctx, req.(*FillFacultyFeedbackRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // AmizoneService_ServiceDesc is the grpc.ServiceDesc for AmizoneService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -436,6 +468,10 @@ var AmizoneService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "DeregisterWifiMac",
 			Handler:    _AmizoneService_DeregisterWifiMac_Handler,
+		},
+		{
+			MethodName: "FillFacultyFeedback",
+			Handler:    _AmizoneService_FillFacultyFeedback_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
